--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Cartão interativo.">
     <meta name="author" content="Caroline Mota">
     <meta name="robots" content="index, follow">
-
+   <link rel="shortcut icon" href="assets/icons8-card-16 (1).png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
