--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Cartão interativo.">
     <meta name="author" content="Caroline Mota">
     <meta name="robots" content="index, follow">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <link rel="shortcut icon" href="assets/icons8-card-16 (1).png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
